--- a/bibliography.bib
+++ b/bibliography.bib
@@ -438,10 +438,10 @@ year={2015}
 	Year = {2001}}
 
 @article{medstats2,
-	Author = {Center for Devices and Radiological Health},
+	Author = {US FDA},
 	Day = {18},
 	Month = {Jan},
-	Journal = {US FDA},
+	Journal = {Center for Devices and Radiological Health},
 	Title = {{Ensuring the Safety of Marketed Medical Devices: CDRH's Medical Device Postmarket Safety Program}},
 	Year = {2006}}
 
