--- a/main.tex
+++ b/main.tex
@@ -36,11 +36,10 @@
 
 \title{High-confidence Medical Device Software Development}
 \author{
-Rahul Mangharam \\
+Zhihao Jiang and Rahul Mangharam \\
 University of Pennsylvania\\
-rahulm@seas.upenn.edu\and Zhihao Jiang \\
-University of Pennsylvania\\
-zhihaoj@seas.upenn.edu}
+\{zhihaoj, rahulm\}@seas.upenn.edu
+}
 
 \begin{document}
 
